# CmakeTemplateProject

./: CMakeLists.txt  GenerateAndBuild.bat.bat  README.md
CMake/: Utils.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt
